# Nibble

./: .clang-format  .gitignore  .gitmodules  Build-Android.sh  Build-Desktop-Debug.sh  Build-Desktop-Linux-Release.sh  Build-Desktop-Windows-x32-Debug.sh  Build-Desktop-Windows-x32-Release.sh  Build-Desktop-Windows-x64-Debug.sh  Build-Desktop-Windows-x64-Release.sh  Build-Emscripten-Debug.sh  Build-Emscripten-Release.sh  Build-Release.sh  CMakeLists.txt  Clean-Android.sh  Doxyfile  Launch-Android-4.4.4.sh  Launch-Android-8.sh  README.md  Todo
CMake/: ToolChain-mingw32.cmake  ToolChain-mingw64.cmake
Chesser/: Board.cpp  BoardRenderer.cpp  BoardRenderer.h  CMakeLists.txt  Log.h  MoveMaker.cpp  MoveMaker.h  ScopeSystem.cpp  __init.h  app.cpp  chsr_api.h  common.h  config.h  defs.h  error_macros.h  game.cpp  game.h  globals.cpp  globals.h  initiator.h  macros.h  mainFunc.h  univ_includes.h  utils.h
Chesser/Nibble/: CMakeLists.txt
Chesser/Nibble/src/: Log.cpp  __init.h  config.h  globals.cpp  globals.h  macros.h
Chesser/Nibble/src/engine/: GEngine.h  Rect.h  Timer.cpp  Timer.h
Chesser/Nibble/src/engine/buffers/bo/: BufferObject.h
Chesser/Nibble/src/engine/buffers/ibo/: IndexBufferObject.cpp
Chesser/Nibble/src/engine/buffers/vao/: VertexArrayObject.cpp
Chesser/Nibble/src/engine/buffers/vbo/: VertexBufferObject.h
Chesser/Nibble/src/engine/effects/post/: .PostEffectEngine.h.swp  PostEffect.cpp  PostEffect.h  PostEffectEngine.cpp  PostEffectEngine.h
Chesser/Nibble/src/engine/effects/post/blur/: BlurEffect.h
Chesser/Nibble/src/engine/effects/post/shake/: ShakeEffect.cpp  ShakeEffect.h
Chesser/Nibble/src/engine/events/: MouseEvents.h  TouchEvents.h
Chesser/Nibble/src/engine/files/: FileManager.cpp  FileManager.h
Chesser/Nibble/src/engine/glsl/v1.x/dt/fs/effects/post/: blur.glsl
Chesser/Nibble/src/engine/glsl/v1.x/dt/vs/: fbo.glsl
Chesser/Nibble/src/engine/glsl/v1.x/dt/vs/effects/post/: blur.glsl
Chesser/Nibble/src/engine/glsl/v3.x/dt/fs/effects/post/: blur.glsl
Chesser/Nibble/src/engine/input/: Input.cpp  Input.h
Chesser/Nibble/src/engine/mvp/: MVP.cpp  MVP.h
Chesser/Nibble/src/engine/shaders/: Shaders.h
Chesser/Nibble/src/engine/text/: TextRenderer.cpp
Chesser/Nibble/src/engine/widgets/: Colors.h  Layer.cpp  Panel.cpp
Chesser/Nibble/src/engine/widgets/drawables/: Drawable.h
Chesser/Nibble/src/engine/widgets/drawables/button/: Button.cpp  Button.h
Chesser/Nibble/src/engine/widgets/drawables/label/: Label.cpp  Label.h
Chesser/Nibble/src/engine/widgets/drawables/object/: Object2D.cpp  Object2D.h
Chesser/Nibble/src/engine/widgets/layouts/: Layout.cpp  Layout.h  SimpleLayout.cpp  SimpleLayout.h  layouts.h
Chesser/Nibble/src/engine/window/: WindowBase.cpp  WindowBase.h
Chesser/Nibble/src/engine/window/desktop/: .Window_desktop.cpp.swp  Window_desktop.cpp  Window_desktop.h
Chesser/engine/: GEngine.h  Point.h  Rect.h  Timer.cpp  Timer.h  buffer.h  engine.h  ibo.h  mvp.h  obj_renderer.h  object.h  shaders.h  textures.cpp  textures.h  vao.h  vbo.h
Chesser/engine/buffers/: BufferObject.cpp  BufferObject.h  FrameBuffer.cpp  FrameBuffer.h  IBO.cpp  IBO.h  RenderBuffer.cpp  RenderBuffer.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  buffers.h
Chesser/engine/events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvents.h  TouchEvents.h  events.h
Chesser/engine/files/: FileManager.cpp  FileManager.h
Chesser/engine/glsl/: fs.glsl  fs_es.glsl  fs_es_em.glsl  tex_fs.glsl  tex_fs_es.glsl  tex_vs.glsl  tex_vs_es.glsl  text_fs_es.glsl  text_fs_es_em.glsl  text_vs.glsl  text_vs_es.glsl  text_vs_es_em.glsl  vs.glsl  vs_es.glsl  vs_es_em.glsl
Chesser/engine/glsl/v1.x/dt/fs/: fbo.glsl  smple.glsl
Chesser/engine/glsl/v1.x/dt/vs/: text.glsl
Chesser/engine/glsl/v1.x/em/fs/: text.glsl
Chesser/engine/glsl/v1.x/es/vs/: smple.glsl
Chesser/engine/glsl/v3.x/dt/fs/: smple.glsl
Chesser/engine/glsl/v3.x/em/fs/: fbo.glsl
Chesser/engine/glsl/v3.x/em/vs/: fbo.glsl  smple.glsl  text.glsl
Chesser/engine/glsl/v3.x/es/fs/: smple.glsl
Chesser/engine/input/: Input.cpp  Input.h  InputCodes.h
Chesser/engine/mvp/: MVP.cpp  MVP.h
Chesser/engine/object/: Object.cpp  Object.h
Chesser/engine/shaders/: Shaders.cpp  Shaders.h
Chesser/engine/text/: TextRenderer.cpp  TextRenderer.h
Chesser/engine/textures/: Texture.cpp  Texture.h
Chesser/engine/widgets/: Colors.h  Layer.cpp  Layer.h  Panel.cpp  Panel.h
Chesser/engine/widgets/drawables/: Drawable.cpp  Drawable.h  drawables.h
Chesser/engine/widgets/drawables/button/: Button.cpp  Button.h
Chesser/engine/widgets/drawables/label/: Label.cpp  Label.h
Chesser/engine/widgets/drawables/object/: Object2D.cpp  Object2D.h
Chesser/engine/widgets/layouts/: Layout.cpp  Layout.h  SimpleLayout.cpp  SimpleLayout.h
Chesser/engine/window/: Window.cpp  Window.h  WindowBase.cpp  WindowBase.h  Window_android.cpp  Window_desktop.cpp
Chesser/engine/window/android/: Window_android.cpp  Window_android.h
Chesser/engine/window/desktop/: Window_desktop.cpp  Window_desktop.h
Chesser/engine/window/emscripten/: Window_emscripten.cpp  Window_emscripten.h
Chesser/game/: Board.h  BoardRenderer.cpp  BoardRenderer.h  Game.cpp  Game.h  MoveMaker.h  ResourceManager.cpp  ResourceManager.h  ScopeSystem.h  game.cpp  game.h
Chesser/game/move/: Move.h  MoveSet.h
Chesser/game/pieces/: Pawn.h
Chesser/move/: Cords.h  Move.h  MoveSet.cpp
Chesser/pieces/: Bishop.h  King.h  Knight.h  Piece.h  Pieces.h  Queen.h  Rook.h
Chesser/src/: app.cpp
Chesser/src/game/pieces/: Bishop.h  King.h  Knight.h  Pawn.h  Piece.h  Queen.h  Rook.h
Chesser/utils/: utils.h
Chesser/widgets/: Layout.h
Chesser_android/: build.gradle  settings.gradle
Chesser_android/app/: build.gradle
Chesser_android/app/src/main/cpp/: CMakeLists.txt  Chesser  native-lib.cpp
glsl/: tex_vs.glsl
scripts/: Build-Desktop-Linux-Debug.sh  Build-Desktop-Windows-x32-Debug.sh  Build-Desktop-Windows-x32-Release.sh  Build-Desktop-Windows-x64-Release.sh  Build-Emscripten-Debug.sh  Build-Emscripten-Release.sh  Install-Apk.sh  Launch-Android-4.4.4.sh  Launch-Emscripten.sh
(+52 files in other folders)
